--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ google:
   search_engine_id: # YOUR_SEARCH_ENGINE_ID
   instant_search: # false (default), true
 # SEO Related
-google_site_verification:
+google_site_verification: "google-site-verification=5hgWVP3WGWAMygt2zikW9OIRzLfEEWWO7usZmno_VNM"
 bing_site_verification:
 naver_site_verification:
 yandex_site_verification:
