Making pages along the navigation menu

--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ analytics:
 author:
   name: "Do-Hyeon Lee"
   avatar: "/assets/images/avatar.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio: "Truly understanding Human Consciousness. Toward efficient and responsible AI."
+  bio: "Navigating brain-mind-behavior intricacies for efficient & responsible AI"
   # location: "Daejeon, Korea"
   links:
     - label: "Location"
