--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal_mistakes_skin: "default"
 locale: "us-EN"
 title: "Do-Hyeon Lee"
 title_separator: " | "
-subtitle: Lead The World
+subtitle: "Human-Machine Co-evolution"
 name: "Do-Hyeon Lee"
 description: "Do-Hyeon's blog"
 url: "https://lee-dohyeon.github.io"
@@ -105,7 +105,7 @@ analytics:
 author:
   name: "Do-Hyeon Lee"
   avatar: "/assets/images/avatar.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio: "Navigating brain-mind-behavior intricacies for efficient & responsible AI"
+  bio: "Interdisciplinary Mind-Behavior-Brain Scientist-Engineer"
   # location: "Daejeon, Korea"
   links:
     - label: "Location"
