--- a/_config.yml
+++ b/_config.yml
@@ -116,7 +116,7 @@ author:
       url: "mailto:lead.o.hyeon@gmail.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://https://x.com/HumMachCoevol"
+      url: "https://x.com/HumMachCoevol"
     - label: "Linkedin"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/dohyeon-lee-4793a6244"
@@ -132,7 +132,7 @@ footer:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: "https://https://x.com/HumMachCoevol"
+      url: "https://x.com/HumMachCoevol"
     - label: "Linkedin"
       icon: "fab fa-fw fa-linkedin"
       url: "https://www.linkedin.com/in/dohyeon-lee-4793a6244"
