--- a/_config.yml
+++ b/_config.yml
@@ -61,7 +61,7 @@ atom_feed:
   hide: # true, false (default)
 search: true # true, false (default)
 search_full_content: true # true, false (default)
-search_provider: "lunr" # lunr (default), algolia, google
+search_provider: lunr # lunr (default), algolia, google
 lunr:
   search_within_pages: true # true, false (default)
 algolia:
@@ -73,7 +73,7 @@ google:
   search_engine_id: b6283f4c5b3cc43b5 # YOUR_SEARCH_ENGINE_ID
   instant_search: # false (default), true
 # SEO Related
-google_site_verification:
+google_site_verification: xrOiIvLVTdrhOnTDa-43yAeFzEEkTyydVGwJ2nqx2F8
 bing_site_verification:
 naver_site_verification:
 yandex_site_verification:
