--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,7 @@ google:
   search_engine_id: b6283f4c5b3cc43b5 # YOUR_SEARCH_ENGINE_ID
   instant_search: # false (default), true
 # SEO Related
-google_site_verification: xrOiIvLVTdrhOnTDa-43yAeFzEEkTyydVGwJ2nqx2F8
+google_site_verification:
 bing_site_verification:
 naver_site_verification:
 yandex_site_verification:
