--- a/_config.yml
+++ b/_config.yml
@@ -205,8 +205,8 @@ sass:
 
 # Outputting
 permalink: /:categories/:title/
-paginate: 1 # 페이지당 표시할 게시물 수
-paginate_path: "/read/motivation/page:num" # 페이지네이션 경로
+paginate: 10 # amount of posts to show
+paginate_path: /page:num/
 timezone: # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 # Plugins (previously gems:)
